maybe fixed background jump issue on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,7 +5,7 @@
 }
 #paper-canvas {
 	position: fixed;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	z-index: -1;
 	overflow: visible;
